# Quake.cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_and_log.bat
src/: adivtab.h  anorms.h  audio.cpp  audio.hpp  bspfile.h  cd_sdl.c  cd_sdl.cpp  cdaudio.hpp  chase.c  chase.cpp  cl_demo.c  cl_demo.cpp  cl_input.c  cl_input.cpp  cl_main.c  cl_main.cpp  cl_parse.c  cl_parse.cpp  cl_tent.c  client.cpp  client.h  client.hpp  cmd.c  cmd.cpp  cmd.h  cmd.hpp  common.c  common.cpp  common.h  common.hpp  console.c  console.cpp  console.hpp  core_types.hpp  crc.c  crc.cpp  crc.hpp  cvar.c  cvar.cpp  cvar.h  (+169 more)
